# zebflow

./: .gitignore  Cargo.toml  README.md  tsconfig.json
docs/: ARCHITECTURE.md  OVERVIEW.md  PLATFORM_WEB.md  README.md  RWE.md
integrations/vscode-zebflow/: LICENSE  README.md  extension.js  package-lock.json  package.json
integrations/vscode-zebflow/icons/: zebflow-icon-theme.json
integrations/vscode-zebflow/language-configuration/: tsx-language-configuration.json  zf-json-language-configuration.json
integrations/vscode-zebflow/snippets/: tsx.json  zf-json.json
integrations/vscode-zebflow/syntaxes/: tsx.tmLanguage.json  (+1 more)
libraries/: MILESTONE.md  README.md
runtime/: secure_js_runner.js
runtime/tsx/: jsx-runtime.d.ts
src/: lib.rs  llm.rs
src/automaton/: MILESTONE.md  assistant_config.rs  contract.rs  flow.rs  http_client.rs  llm_interface.rs  mod.rs  repl.rs  tools.rs
src/framework/: MILESTONE.md  interface.rs  mod.rs  model.rs  registry.rs
src/infra/: mod.rs
src/language/: interface.rs  mod.rs  model.rs  registry.rs
src/pipeline/: interface.rs  mod.rs  model.rs  registry.rs
src/platform/: MILESTONE.md  MILESTONES.md  error.rs  mod.rs  model.rs  operations.rs
src/rwe/: ADAPTER.md  BLESSED_LIBS.md  MILESTONE.md  SPECIFICATION.md  axum_demo.rs  class_notation.rs  interface.rs  mod.rs  model.rs  protocol.rs  registry.rs  script_cache.rs  tsx_frontend.rs
tests/: README.md  framework.rs  language.rs  platform.rs  rwe.rs
tests/framework/: smoke.rs  web_render_node.rs
tests/language/: deno_sandbox.rs  smoke.rs
tests/platform/: smoke.rs
tests/rwe/: axum_demo.rs  protocol.rs  smoke.rs  template_render.rs
(+311 files in other folders)
