[package]
name = "zebflow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
pulldown-cmark = "0.12"
sekejap = { path = "../juice-lang/sekejap" }
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"
postgres = "0.19"
arc-swap = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
