[package]
name = "zebflow"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
pulldown-cmark = "0.12"
sekejap = "0.4.0"
swc_common = "19.0.0"
swc_ecma_ast = "21.0.0"
swc_ecma_parser = "35.0.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
futures = "0.3"
async-stream = "0.3"
arc-swap = "1"
ureq = { version = "2", features = ["json"] }
dotenvy = "0.15"
rmcp = { version = "0.17.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio-util = "0.7.18"
rand = "0.10.0"
hex = "0.4.3"
tower = { version = "0.5", features = ["util"] }
oxc_allocator = "0.116.0"
oxc_ast = "0.116.0"
oxc_parser = "0.116.0"
oxc_span = "0.116.0"
base64 = "0.22"
sha2 = "0.10"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
